doxycfg: re-fix linking to spdlog, but at the correct location
Previously, commits:

- 70bb112352ae7f3130647dcc009d8de5d4134e6d
- 71f2ed171a6d14a67f1905802714add974c31789

added spdlog as a dependency of individual programs in addon/ to ensure
that they actually include link-time dependencies on libspdlog.(so|dll)

Also, commit 1e8aa2da704d8f9cc3357303e6bc4f818108f301 added spdlog as a
dependency of the primary "doxygen" program.

The underlying issue here is that trace.cpp and trace.h (part of the
doxycfg static library) includes the spdlog headers and thus needs all
of its:
- interface include directories
- compile definitions
- link libraries, if any (and with system spdlog, there will be)

Conversely, the programs don't actually need spdlog at all, they don't
directly use it. They don't need its include directories, nor its
compile definitions, but they do need to link to spdlog::spdlog if and
only if they link to a target -- doxycfg -- which requires spdlog.

CMake automatically includes libspdlog.so in the linker command line
when the doxycfg static library has a private dependency on it, and
doesn't propagate interface include directories or compile definitions
in this case. All this is exactly what we want, both for doxycfg and for
the CLI programs.

Additionally, the doxymain static library includes trace.h and therefore
needs to link to spdlog.

This effectively reverts commits 70bb112352ae7f3130647dcc009d8de5d4134e6d
and 71f2ed171a6d14a67f1905802714add974c31789 because those commits were
the incorrect solution to the problem.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -211,6 +211,9 @@ add_library(doxycfg STATIC
     debug.cpp
     trace.cpp
 )
+target_link_libraries(doxycfg PRIVATE
+    spdlog::spdlog
+)
 add_sanitizers(doxycfg)
 
 add_library(doxymain STATIC
@@ -321,6 +324,9 @@ add_library(doxymain STATIC
     xmldocvisitor.cpp
     xmlgen.cpp
 )
+target_link_libraries(doxymain PRIVATE
+    spdlog::spdlog
+)
 add_sanitizers(doxymain)
 
 # LLVM/clang headers give a lot of warnings with -Wshadow and -Wcast-align so we disable them for
@@ -387,7 +393,6 @@ target_link_libraries(doxygen PRIVATE
     xml
     doxygen_version
     vhdlparser
-    spdlog::spdlog
     ${ICONV_LIBRARIES}
     ${CMAKE_THREAD_LIBS_INIT}
     ${EXTRA_LIBS}
