--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -42,14 +42,26 @@ jobs:
             cmake_extra_opts: "-Duse_libclang=YES -Dstatic_libclang=YES -Duse_libc++=NO"
           }
         - {
-            name: "macOS Latest Release",
-            os: macos-latest,
+            name: "macOS Latest Release (Intel)",
+            os: macos-12,
             build_type: "Release", cc: "clang", cxx: "clang++",
             build_gen: "Unix Makefiles"
           }
         - {
-            name: "macOS Latest Debug",
-            os: macos-latest,
+            name: "macOS Latest Debug (Intel)",
+            os: macos-12,
+            build_type: "Debug", cc: "clang", cxx: "clang++",
+            build_gen: "Unix Makefiles"
+          }
+        - {
+            name: "macOS Latest Release (Apple Silicon)",
+            os: macos-14-arm64,
+            build_type: "Release", cc: "clang", cxx: "clang++",
+            build_gen: "Unix Makefiles"
+          }
+        - {
+            name: "macOS Latest Debug (Apple Silicon)",
+            os: macos-14-arm64,
             build_type: "Debug", cc: "clang", cxx: "clang++",
             build_gen: "Unix Makefiles"
           }
