--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -53,18 +53,18 @@ jobs:
             build_type: "Debug", cc: "clang", cxx: "clang++",
             build_gen: "Unix Makefiles"
           }
-        - {
-            name: "macOS Latest Release (Apple Silicon)",
-            os: macos-14-arm64,
-            build_type: "Release", cc: "clang", cxx: "clang++",
-            build_gen: "Unix Makefiles"
-          }
-        - {
-            name: "macOS Latest Debug (Apple Silicon)",
-            os: macos-14-arm64,
-            build_type: "Debug", cc: "clang", cxx: "clang++",
-            build_gen: "Unix Makefiles"
-          }
+#        - {
+#            name: "macOS Latest Release (Apple Silicon)",
+#            os: macos-14-arm64,
+#            build_type: "Release", cc: "clang", cxx: "clang++",
+#            build_gen: "Unix Makefiles"
+#          }
+#        - {
+#            name: "macOS Latest Debug (Apple Silicon)",
+#            os: macos-14-arm64,
+#            build_type: "Debug", cc: "clang", cxx: "clang++",
+#            build_gen: "Unix Makefiles"
+#          }
         - {
             name: "Windows Latest MSVC Debug",
             os: windows-latest,
