Tried some more clang-tidy checks (commented out)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,7 +91,11 @@ if (ENABLE_CLANG_TIDY)
     if (CLANGTIDY)
        set(CMAKE_CXX_CLANG_TIDY clang-tidy;
                                 -header-filter=.;
-                                -checks=-*,cppcoreguidelines-special-member-functions)
+                                -checks=-*,cppcoreguidelines-special-member-functions
+                                #-checks=-*,modernize-use-nullptr
+                                #-checks=-*,modernize-use-override
+                                #-checks=-*,modernize-use-emplace
+                            )
     else()
         message(SEND_ERROR "clang-tidy requested but executable not found")
     endif()
