Fixed a forwarding reference problem
Found by clang-tidy's cppcoreguidelines-missing-std-forward check

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,6 +92,7 @@ if (ENABLE_CLANG_TIDY)
        set(CMAKE_CXX_CLANG_TIDY clang-tidy;
                                 -header-filter=.;
                                 -checks=-*,cppcoreguidelines-special-member-functions
+                                #-checks=-*,cppcoreguidelines-missing-std-forward
                                 #-checks=-*,cppcoreguidelines-init-variables
                                 #-checks=-*,cppcoreguidelines-misleading-capture-default-by-value
                                 #-checks=-*,modernize-use-nullptr
