--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -43,13 +43,13 @@ jobs:
           }
         - {
             name: "macOS Latest Release (Intel)",
-            os: macos-latest,
+            os: macos-13,
             build_type: "Release", cc: "clang", cxx: "clang++",
             build_gen: "Unix Makefiles"
           }
         - {
             name: "macOS Latest Debug (Intel)",
-            os: macos-latest,
+            os: macos-13,
             build_type: "Debug", cc: "clang", cxx: "clang++",
             build_gen: "Unix Makefiles"
           }
