Use CMake's FindIconv (see #10887)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -393,7 +393,7 @@ target_link_libraries(doxygen PRIVATE
     xml
     doxygen_version
     vhdlparser
-    ${ICONV_LIBRARIES}
+    ${Iconv_LIBRARIES}
     ${CMAKE_THREAD_LIBS_INIT}
     ${EXTRA_LIBS}
     ${CLANG_LIBS}
