--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -69,14 +69,14 @@ jobs:
             name: "Windows Latest MSVC Debug",
             os: windows-latest,
             build_type: "Debug", cc: "cl", cxx: "cl",
-            build_gen: "NMake Makefiles"
+            build_gen: "NMake Makefiles",
             cmake_extra_opts: "-Dwin_static=YES"
           }
         - {
             name: "Windows Latest MSVC Release",
             os: windows-latest,
             build_type: "Release", cc: "cl", cxx: "cl",
-            build_gen: "NMake Makefiles"
+            build_gen: "NMake Makefiles",
             cmake_extra_opts: "-Dwin_static=YES"
           }
     steps:
