--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -177,9 +177,13 @@ set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} ${JAVA_CC_EXTRA_FLAGS}")
 if(POLICY CMP0063)
   cmake_policy(SET CMP0063 NEW)
 endif()
+
+# when using mutrace comment the next 3 lines and uncomment the last 2
 set(CMAKE_CXX_VISIBILITY_PRESET hidden)
 set(CMAKE_C_VISIBILITY_PRESET hidden)
 set(CMAKE_VISIBILITY_INLINES_HIDDEN 1)
+#set(CMAKE_CXX_FLAGS       "${CMAKE_CXX_FLAGS}       -rdynamic")
+#set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -rdynamic")
 
 if (CMAKE_GENERATOR MATCHES "Ninja")
   set(LEX_FLAGS )
