Compilation error under Cygwin on language.cpp: "too many sections"
In case we build under Cygwin under debug mode we get for language.cpp the message about "too many sections".
This can be prevented by means of using the extra : `-Wa,-mbig-obj`.

(Might be that this problem also occurs under MinGW but due to missing test environment it is not added there yet)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -144,7 +144,7 @@ if (WIN32)
     endif()
 endif()
 if (CMAKE_SYSTEM_NAME MATCHES "CYGWIN")
-   set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Og")
+   set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Og -Wa,-mbig-obj")
 
    if (CMAKE_BUILD_TYPE STREQUAL  "")
      set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O1")
