issue #10649 Building failure: ISO C++17 does not allow 'register' storage class specifier [-Wregister]
Fixing the problems when using a  `< 2.6.0` version of flex that still issues the word `register`

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -107,6 +107,21 @@ endif()
 # produce compile_commands.json
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
+if (FLEX_VERSION VERSION_LESS 2.6.0)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Dregister=")
+    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Dregister=")
+    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Dregister=")
+    set(CMAKE_CXX_FLAGS_MINSIZEREL "${CMAKE_CXX_FLAGS_MINSIZEREL} -Dregister=")
+    set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} -Dregister=")
+    if (MSVC)
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_ALLOW_KEYWORD_MACROS=")
+        set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -D_ALLOW_KEYWORD_MACROS=")
+        set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -D_ALLOW_KEYWORD_MACROS=")
+        set(CMAKE_CXX_FLAGS_MINSIZEREL "${CMAKE_CXX_FLAGS_MINSIZEREL} -D_ALLOW_KEYWORD_MACROS=")
+        set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} -D_ALLOW_KEYWORD_MACROS=")
+    endif()
+endif()
+
 if (CMAKE_SYSTEM MATCHES "Darwin")
     set(CMAKE_OSX_DEPLOYMENT_TARGET "${MACOS_VERSION_MIN}" CACHE STRING "Minimum OS X deployment version" FORCE)
     set(CMAKE_CXX_FLAGS "-Wno-deprecated-register -mmacosx-version-min=${MACOS_VERSION_MIN} ${CMAKE_CXX_FLAGS}")
