add a jsonML DocVisitor
jsonML is used as a common ground when testing.
runtest.py will dump the .db as a jsonML
and also convert the XML to jsonML.

In the end, the two jsonML output must match.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -312,6 +312,7 @@ add_library(doxymain STATIC
     searchindex_js.cpp
     sitemap.cpp
     sqlite3gen.cpp
+    jsonmldocvisitor.cpp
     stlsupport.cpp
     symbolresolver.cpp
     tagreader.cpp
