--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -100,8 +100,7 @@ jobs:
 
     - name: Install LaTeX (MacOS)
       run: |
-        brew update
-        brew install python@3 # TEMP hack
+        brew update || true
         brew install --cask mactex;
         echo "/Library/TeX/texbin/" >> $GITHUB_PATH
       if: matrix.config.os == 'macos-13'
