--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -101,7 +101,7 @@ jobs:
     - name: Install LaTeX (MacOS)
       run: |
         brew update || true
-        brew install --cask mactex;
+        brew install --cask mactex || true
         echo "/Library/TeX/texbin/" >> $GITHUB_PATH
       if: matrix.config.os == 'macos-13'
 
