--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -53,18 +53,18 @@ jobs:
             build_type: "Debug", cc: "clang", cxx: "clang++",
             build_gen: "Unix Makefiles"
           }
-#        - {
-#            name: "macOS Latest Release (Apple Silicon)",
-#            os: macos-14-arm64,
-#            build_type: "Release", cc: "clang", cxx: "clang++",
-#            build_gen: "Unix Makefiles"
-#          }
-#        - {
-#            name: "macOS Latest Debug (Apple Silicon)",
-#            os: macos-14-arm64,
-#            build_type: "Debug", cc: "clang", cxx: "clang++",
-#            build_gen: "Unix Makefiles"
-#          }
+        - {
+            name: "macOS Latest Release (Apple Silicon)",
+            os: macos-14,
+            build_type: "Release", cc: "clang", cxx: "clang++",
+            build_gen: "Unix Makefiles"
+          }
+        - {
+            name: "macOS Latest Debug (Apple Silicon)",
+            os: macos-14,
+            build_type: "Debug", cc: "clang", cxx: "clang++",
+            build_gen: "Unix Makefiles"
+          }
         - {
             name: "Windows Latest MSVC Debug",
             os: windows-latest,
@@ -103,7 +103,7 @@ jobs:
         brew update || true
         brew install --cask mactex || true
         echo "/Library/TeX/texbin/" >> $GITHUB_PATH
-      if: matrix.config.os == 'macos-13'
+      if: startsWith(matrix.config.os,'macos-')
 
     - name: Install libclang (Ubuntu 20.04)
       run: |
@@ -175,7 +175,7 @@ jobs:
          brew install --force --overwrite python@3.12 # temp hack
          brew update
          brew install libxml2
-      if: matrix.config.os == 'macos-13'
+      if: startsWith(matrix.config.os,'macos-')
 
     - name: Install bison (MacOS)
       run: |
@@ -183,7 +183,7 @@ jobs:
         brew install bison;
         echo "$(brew --prefix bison)/bin" >> $GITHUB_PATH
         #echo "/usr/local/opt/bison/bin" >> $GITHUB_PATH
-      if: matrix.config.os == 'macos-13'
+      if: startsWith(matrix.config.os,'macos-')
 
     - name: Install bison/flex (Windows)
       run: |
@@ -207,7 +207,7 @@ jobs:
           # Try again
           brew install graphviz
         fi
-      if: matrix.config.os == 'macos-13'
+      if: startsWith(matrix.config.os,'macos-')
 
     - name: Install Graphviz (Windows)
       run:
@@ -228,13 +228,13 @@ jobs:
       uses: jurplel/install-qt-action@v4
       with:
         version: 6.2.*
-      if: matrix.config.is == 'macos-13'
+      if: startsWith(matrix.config.os,'macos-')
 
     - name: Install Qt 5
       uses: jurplel/install-qt-action@v4
       with:
         version: 5.*
-      if: matrix.config.is != 'macos-13'
+      if: startsWith(matrix.config.os,'macos-')!=true
 
     - name: Check tool versions (Linux / MacOS)
       shell: bash
