issue #11245 Add class attribute to the `@qualifier` command in the HTML output
Adding the possibility to have (HTML) class attribute values as options with the `@qualifier` command.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -302,6 +302,7 @@ add_library(doxymain STATIC
     plantuml.cpp
     qcstring.cpp
     qhp.cpp
+    qualifiers.cpp
     reflist.cpp
     regex.cpp
     resourcemgr.cpp
