--- a/.github/actions/build_cmake/action.yml
+++ b/.github/actions/build_cmake/action.yml
@@ -4,6 +4,7 @@ inputs:
   config:
     description: platform specific info
     required: true
+
 runs:
   using: "composite"
   steps:
@@ -17,7 +18,7 @@ runs:
     with:
       url: "https://github.com/pffang/libiconv-for-Windows/releases/download/v1.16/libiconv-for-Windows_1.16.7z"
       target: .
-    if: config.os == 'windows-latest'
+    if: ${{ inputs.config.os }} == 'windows-latest'
 
   - name: Install LaTeX (Linux)
     shell: bash
@@ -26,7 +27,7 @@ runs:
       sudo apt upgrade
       sudo apt update
       sudo apt-get install texlive texlive-latex-recommended texlive-extra-utils texlive-latex-extra texlive-font-utils
-    if: startsWith(config.os,'ubuntu-')
+    if: startsWith(${{ inputs.config.os }},'ubuntu-')
 
   - name: Install LaTeX (MacOS)
     shell: bash
@@ -34,7 +35,7 @@ runs:
       brew update || true
       brew install --cask mactex || true
       echo "/Library/TeX/texbin/" >> $GITHUB_PATH
-    if: startsWith(config.os,'macos-')
+    if: startsWith(${{ inputs.config.os }},'macos-')
 
   - name: Install libclang (Ubuntu 20.04)
     shell: bash
@@ -56,14 +57,14 @@ runs:
       ls -al /etc/alternatives/clang++
       which clang++
       clang++ -v
-    if: config.os == 'ubuntu-20.04'
+    if: ${{ inputs.config.os }} == 'ubuntu-20.04'
 
   - name: Install libxapian (Ubuntu 20.04)
     shell: bash
     run: |
       sudo apt update
       sudo apt install libxapian-dev
-    if: config.os == 'ubuntu-20.04'
+    if: ${{ inputs.config.os }} == 'ubuntu-20.04'
 
   - name: Install LaTeX (Windows)
     uses: teatimeguest/setup-texlive-action@v3
@@ -74,20 +75,20 @@ runs:
         babel-dutch
         cjk
         bibtex
-    if: config.os == 'windows-latest'
+    if: ${{ inputs.config.os }} == 'windows-latest'
 
   - name: Install Ghostscript (Linux)
     shell: bash
     run: |
       sudo apt update
       sudo apt-get install ghostscript
-    if: startsWith(config.os,'ubuntu-')
+    if: startsWith(${{ inputs.config.os }},'ubuntu-')
 
   - name: Install Ghostscript (Windows)
     shell: bash
     run:
       choco install ghostscript
-    if: config.os == 'windows-latest'
+    if: ${{ inputs.config.os }} == 'windows-latest'
 
   - name: Setting Ghostscript paths (Windows)
     shell: bash
@@ -96,14 +97,14 @@ runs:
       export PATH="$GSpath:$PATH"
       export GSpath=`echo "$GSpath" | sed -e "s%/c%C:%"`
       echo "$GSpath" >> $GITHUB_PATH
-    if: config.os == 'windows-latest'
+    if: ${{ inputs.config.os }} == 'windows-latest'
 
   - name: Install xmllint (Linux)
     shell: bash
     run: |
        sudo apt-get update
        sudo apt-get install libxml2-utils
-    if: startsWith(config.os,'ubuntu-')
+    if: startsWith(${{ inputs.config.os }},'ubuntu-')
 
   - name: Install xmllint (MacOS)
     shell: bash
@@ -112,7 +113,7 @@ runs:
        brew install --force --overwrite python@3.12 # temp hack
        brew update
        brew install libxml2
-    if: startsWith(config.os,'macos-')
+    if: startsWith(${{ inputs.config.os }},'macos-')
 
   - name: Install bison (MacOS)
     shell: bash
@@ -121,21 +122,21 @@ runs:
       brew install bison;
       echo "$(brew --prefix bison)/bin" >> $GITHUB_PATH
       #echo "/usr/local/opt/bison/bin" >> $GITHUB_PATH
-    if: startsWith(config.os,'macos-')
+    if: startsWith(${{ inputs.config.os }},'macos-')
 
   - name: Install bison/flex (Windows)
     shell: bash
     run: |
       #Choco-Install -PackageName winflexbison
       choco install winflexbison3
-    if: config.os == 'windows-latest'
+    if: ${{ inputs.config.os }} == 'windows-latest'
 
   - name: Install Graphviz (Linux)
     shell: bash
     run: |
       sudo apt update
       sudo apt-get install graphviz
-    if: startsWith(config.os,'ubuntu-')
+    if: startsWith(${{ inputs.config.os }},'ubuntu-')
 
   - name: Install Graphviz (MacOS)
     shell: bash
@@ -148,36 +149,36 @@ runs:
         # Try again
         brew install graphviz
       fi
-    if: startsWith(config.os,'macos-')
+    if: startsWith(${{ inputs.config.os }},'macos-')
 
   - name: Install Graphviz (Windows)
     shell: bash
     run:
       choco install graphviz.portable
-    if: config.os == 'windows-latest'
+    if: ${{ inputs.config.os }} == 'windows-latest'
 
   - name: Setup VS Environment (Windows)
     uses: seanmiddleditch/gha-setup-vsdevenv@master
-    if: config.os == 'windows-latest'
+    if: ${{ inputs.config.os }} == 'windows-latest'
 
   - name: Refresh Env (Windows)
     shell: bash
     run: |
       Import-Module $env:ChocolateyInstall\helpers\chocolateyProfile.psm1
       refreshenv
-    if: config.os == 'windows-latest'
+    if: ${{ inputs.config.os }} == 'windows-latest'
 
   - name: Install Qt 6
     uses: jurplel/install-qt-action@v4
     with:
       version: 6.2.*
-    if: startsWith(config.os,'macos-')
+    if: startsWith(${{ inputs.config.os }},'macos-')
 
   - name: Install Qt 5
     uses: jurplel/install-qt-action@v4
     with:
       version: 5.*
-    if: startsWith(config.os,'macos-')!=true
+    if: startsWith(${{ inputs.config.os }},'macos-')!=true
 
   - name: Check tool versions (Linux / MacOS)
     shell: bash
@@ -202,7 +203,7 @@ runs:
       dot -V;
       echo "=== ghostscript ===";
       gs --version;
-    if: config.os != 'windows-latest'
+    if: ${{ inputs.config.os }} != 'windows-latest'
 
   - name: Check tool versions (Windows)
     shell: bash
@@ -227,23 +228,23 @@ runs:
       dot -V;
       echo "=== ghostscript ===";
       gswin64c --version;
-    if: config.os == 'windows-latest'
+    if: ${{ inputs.config.os }} == 'windows-latest'
 
   - name: Configure
     shell: cmake -P {0}
     run: |
-      set(ENV{CC} ${{ config.cc }})
-      set(ENV{CXX} ${{ config.cxx }})
+      set(ENV{CC} ${{ ${{ inputs.config.cc }} }})
+      set(ENV{CXX} ${{ ${{ inputs.config.cxx }} }})
 
       execute_process(
         COMMAND cmake
           -S .
           -B build
-          -D CMAKE_BUILD_TYPE=${{ config.build_type }}
-          -G "${{ config.build_gen }}"
+          -D CMAKE_BUILD_TYPE=${{ ${{ inputs.config.build_type }} }}
+          -G "${{ ${{ inputs.config.build_gen }} }}"
           -Dbuild_doc=YES
           -Dbuild_wizard=YES
-          ${{ config.cmake_extra_opts }}
+          ${{ ${{ inputs.config.cmake_extra_opts }} }}
         RESULT_VARIABLE result
       )
       if (NOT result EQUAL 0)
@@ -272,7 +273,7 @@ runs:
   - name: Archive build artifacts
     uses: actions/upload-artifact@v4
     with:
-      name: "${{ config.name }} build artifacts"
+      name: "${{ ${{ inputs.config.name }} }} build artifacts"
       path: build/bin/
 
   - name: Run tests (Linux / MacOS)
@@ -289,7 +290,7 @@ runs:
       if (NOT result EQUAL 0)
         message(FATAL_ERROR "Running tests failed!")
       endif()
-    if: config.os != 'windows-latest'
+    if: ${{ inputs.config.os }} != 'windows-latest'
 
   - name: Run tests (Windows)
     shell: cmake -P {0}
@@ -305,7 +306,7 @@ runs:
       if (NOT result EQUAL 0)
         message(FATAL_ERROR "Running tests failed!")
       endif()
-    if: config.os == 'windows-latest'
+    if: ${{ inputs.config.os }} == 'windows-latest'
 
   - name: Generate documentation
     shell: cmake -P {0}
