--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -419,7 +419,8 @@ jobs:
       uses: actions/download-artifact@v3
       with:
         path: artifacts/
-    - name: Show results:
+
+    - name: Show results
       run: |
         ls artifacts/
 
