Added helper script to live edit & view a doxygen comment block
This uses a new -c option to generate HTML output for a single comment

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -310,6 +310,7 @@ add_library(doxymain STATIC
     rtfstyle.cpp
     searchindex.cpp
     searchindex_js.cpp
+    singlecomment.cpp
     sitemap.cpp
     sqlite3gen.cpp
     stlsupport.cpp
