update paule32 Pascal parser
pre-adding stuff for parse pascal files
this is only a testing branch !!!

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -110,6 +110,10 @@ set(LEX_FILES
     pre
     pycode
     pyscanner
+    pascode
+    passcanner
+    dbcode
+    dbscanner
     scanner
     sqlcode
     vhdlcode
