--- a/doc_internal/Doxyfile.in
+++ b/doc_internal/Doxyfile.in
@@ -329,6 +329,7 @@ HIDE_UNDOC_RELATIONS   = YES
 HAVE_DOT               = YES
 DOT_NUM_THREADS        = 0
 DOT_GRAPH_ATTR         = "bgcolor=\"transparent\""
+DOT_RANKDIR_INCLUDE    =
 DOT_COMMON_ATTR        = "fontname=Helvetica,fontsize=10"
 DOT_EDGE_ATTR          = "labelfontname=Helvetica,labelfontsize=10"
 DOT_NODE_ATTR          = "shape=box,height=0.2,width=0.4"
