--- a/doc_internal/Doxyfile.in
+++ b/doc_internal/Doxyfile.in
@@ -329,6 +329,7 @@ HIDE_UNDOC_RELATIONS   = YES
 HAVE_DOT               = YES
 DOT_NUM_THREADS        = 0
 DOT_GRAPH_ATTR         = "bgcolor=\"transparent\""
+DOT_RANKDIR_DIR_DEP    =
 DOT_RANKDIR_HIERARCHY  = LR
 DOT_RANKDIR_GROUP_COL  = LR
 DOT_RANKDIR_INCLUDE    =
