--- a/doc_internal/Doxyfile.in
+++ b/doc_internal/Doxyfile.in
@@ -335,6 +335,7 @@ DOT_RANKDIR_DIR_DEP    =
 DOT_RANKDIR_HIERARCHY  = LR
 DOT_RANKDIR_GROUP_COL  = LR
 DOT_RANKDIR_INCLUDE    =
+DOT_RANKDIR_VHDL       = TB
 DOT_COMMON_ATTR        = "fontname=Helvetica,fontsize=10"
 DOT_EDGE_ATTR          = "labelfontname=Helvetica,labelfontsize=10"
 DOT_NODE_ATTR          = "shape=box,height=0.2,width=0.4"
