issue #11416 CMake: Error in doc_internal/CMakeLists.txt:22 Problem configuring file
Fixed usage of `CMAKE_SOURCE_DIR` versus `CMAKE_CURRENT_SOURCE_DIR` so doxygen can be used as "cloned sub-project"

--- a/doc_internal/CMakeLists.txt
+++ b/doc_internal/CMakeLists.txt
@@ -19,7 +19,7 @@ else()
     find_package(Doxygen)
 endif()
 
-configure_file(${CMAKE_SOURCE_DIR}/doc_internal/Doxyfile.in "${CMAKE_CURRENT_BINARY_DIR}/Doxyfile" @ONLY)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in "${CMAKE_CURRENT_BINARY_DIR}/Doxyfile" @ONLY)
 
 set(DOC_FILES
         language.tpl
