--- a/doc_internal/Doxyfile.in
+++ b/doc_internal/Doxyfile.in
@@ -8,7 +8,7 @@ PROJECT_NAME           = Doxygen
 PROJECT_NUMBER         =
 PROJECT_BRIEF          =
 PROJECT_LOGO           =
-PROJECT_ICON           = @CMAKE_CURRENT_SOURCE_DIR@/../templates/icon/doxygen.ico
+PROJECT_ICON           = @CMAKE_SOURCE_DIR@/templates/icon/doxygen.ico
 OUTPUT_DIRECTORY       = @PROJECT_BINARY_DIR@/doxygen_docs
 CREATE_SUBDIRS         = YES
 CREATE_SUBDIRS_LEVEL   = 8
@@ -20,8 +20,8 @@ ABBREVIATE_BRIEF       =
 ALWAYS_DETAILED_SEC    = NO
 INLINE_INHERITED_MEMB  = NO
 FULL_PATH_NAMES        = YES
-STRIP_FROM_PATH        = @CMAKE_CURRENT_SOURCE_DIR@/..
-STRIP_FROM_INC_PATH    = @CMAKE_CURRENT_SOURCE_DIR@/..
+STRIP_FROM_PATH        = @CMAKE_SOURCE_DIR@
+STRIP_FROM_INC_PATH    = @CMAKE_SOURCE_DIR@
 SHORT_NAMES            = NO
 JAVADOC_AUTOBRIEF      = YES
 JAVADOC_BANNER         = NO
@@ -115,15 +115,15 @@ WARN_LOGFILE           =
 #---------------------------------------------------------------------------
 # Configuration options related to the input files
 #---------------------------------------------------------------------------
-INPUT                  = @CMAKE_CURRENT_SOURCE_DIR@/doxygen.md \
+INPUT                  = @CMAKE_SOURCE_DIR@/doc_internal/doxygen.md \
                          @PROJECT_BINARY_DIR@/doc_internal/commands_history.md \
-                         @CMAKE_CURRENT_SOURCE_DIR@/commands_internal.md \
-                         @CMAKE_CURRENT_SOURCE_DIR@/releases.md \
+                         @CMAKE_SOURCE_DIR@/doc_internal/commands_internal.md \
+                         @CMAKE_SOURCE_DIR@/doc_internal/releases.md \
                          @PROJECT_BINARY_DIR@/doc_internal/tags_history.md \
                          @PROJECT_BINARY_DIR@/doc_internal/translator_report.md \
-                         @CMAKE_CURRENT_SOURCE_DIR@/../src \
-                         @CMAKE_CURRENT_SOURCE_DIR@/../vhdlparser \
-                         @CMAKE_CURRENT_SOURCE_DIR@/../libxml
+                         @CMAKE_SOURCE_DIR@/src \
+                         @CMAKE_SOURCE_DIR@/vhdlparser \
+                         @CMAKE_SOURCE_DIR@/libxml
 INPUT_ENCODING         = UTF-8
 INPUT_FILE_ENCODING    =
 FILE_PATTERNS          = *.h \
@@ -172,7 +172,7 @@ HTML_FILE_EXTENSION    = .html
 HTML_HEADER            =
 HTML_FOOTER            =
 HTML_STYLESHEET        =
-HTML_EXTRA_STYLESHEET  = @CMAKE_CURRENT_SOURCE_DIR@/doc_internal.css
+HTML_EXTRA_STYLESHEET  = @CMAKE_SOURCE_DIR@/doc_internal/doc_internal.css
 HTML_EXTRA_FILES       =
 HTML_COLORSTYLE        = TOGGLE
 HTML_COLORSTYLE_HUE    = 220
@@ -305,9 +305,9 @@ ENABLE_PREPROCESSING   = YES
 MACRO_EXPANSION        = YES
 EXPAND_ONLY_PREDEF     = YES
 SEARCH_INCLUDES        = YES
-INCLUDE_PATH           = @CMAKE_CURRENT_SOURCE_DIR@/../deps/libmd5 \
-                         @CMAKE_CURRENT_SOURCE_DIR@/../deps/liblodepng \
-                         @CMAKE_CURRENT_SOURCE_DIR@/../deps/libmscgen
+INCLUDE_PATH           = @CMAKE_SOURCE_DIR@/deps/libmd5 \
+                         @CMAKE_SOURCE_DIR@/deps/liblodepng \
+                         @CMAKE_SOURCE_DIR@/deps/libmscgen
 INCLUDE_FILE_PATTERNS  =
 PREDEFINED             = DOXYGEN_ONLY
 EXPAND_AS_DEFINED      = DOC_NODES \
