--- a/.github/workflows/translation.yml
+++ b/.github/workflows/translation.yml
@@ -34,14 +34,14 @@ jobs:
         mkdir -p locale/en/LC_MESSAGES
         msgfmt -o locale/en/LC_MESSAGES/messages.mo locale/en.po
         mkdir -p bin/locale/en/LC_MESSAGES
-        cp locale/en/LC_MESSAGES/messages.po bin/locale/en/LC_MESSAGES/messages.po
+        cp locale/en/LC_MESSAGES/messages.mo bin/locale/en/LC_MESSAGES/messages.mo
     
     - name: Compile Translations (German)
       run: |
         mkdir -p locale/de/LC_MESSAGES
         msgfmt -o locale/de/LC_MESSAGES/messages.mo locale/de.po
         mkdir -p bin/locale/de/LC_MESSAGES
-        cp locale/de/LC_MESSAGES/messages.po bin/locale/de/LC_MESSAGES/messages.po
+        cp locale/de/LC_MESSAGES/messages.mo bin/locale/de/LC_MESSAGES/messages.mo
         
     - name: Create Archive
       run: |
