adding localization support
I have start the modularization of Doxygen by implement GNU gettext that you can use in combination with .mo files.
mo files are compiled/indexed localization files that can be used to provide different languages for the application with one source code texts.

--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -90,6 +90,18 @@ jobs:
         target: .
       if: matrix.config.os == 'windows-latest'
 
+    # pre-bvilt: paule32
+    - name: Install localization files (Windows)
+      run: |
+        git clone https://github.com/paule32/doxygen-translations.git
+        mkdir -p build/bin
+        mkdir -p gettext/inc
+        mkdir -p gettext/lib
+        cp doxygen-translations/bin/*.* ./gettext/bin/
+        cp doxygen-translations/inc/*.* ./gettext/inc/
+        cp doxygen-translations/lib/*.* ./gettext/lib/
+      if: matrix.config.os == 'windows-latest'
+
     - name: Install LaTeX (Linux)
       run: |
         sudo apt update --fix-missing
