--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -94,7 +94,7 @@ jobs:
     - name: Install localization files (Windows)
       run: |
         git clone https://github.com/paule32/doxygen-translations.git
-        mkdir -p build/bin
+        mkdir -p gettext/bin
         mkdir -p gettext/inc
         mkdir -p gettext/lib
         cp doxygen-translations/bin/*.* ./gettext/bin/
